# mouzi

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: CNAME  index.html
docs/about/: index.html
docs/privacy/: index.html
posts/: hacker-news.md  linkedin.md  reddit.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  rules.rs  tray.rs  watcher.rs
src/components/: Popup.tsx  Settings.tsx
src/i18n/: index.ts
src/i18n/locales/: de.json  en.json  fr.json  it.json  pl.json  ru.json
src/store/: useAppStore.ts
